--- a/popup.css
+++ b/popup.css
@@ -65,9 +65,53 @@ hr {
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
+  margin-bottom: 12px;
 }
 .setting label {
   cursor: pointer;
+}
+
+.font-size-control {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.font-size-slider {
+  width: 80px;
+  height: 4px;
+  background: #444;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.font-size-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.font-size-slider::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+#fontSizeValue {
+  font-size: 12px;
+  color: #aaa;
+  min-width: 30px;
+  text-align: right;
 }
 
 /* Custom Toggle Switch Styling */
